# webdataset_helper

./: setup.cfg
src/webdataset_helper/: __init__.py  shard_writer.py  utils.py
