# setup.cfg

[metadata]
name = webdataset_helper
version = 0.1.0
author = genggui001
author_email = genggui001
description = 一个用于辅助WebDataset操作的工具包
long_description = file: README.md
long_description_content_type = text/markdown
url = 您的项目网址，例如GitHub仓库
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    webdataset==0.2.100
    fsspec

[options.packages.find]
where = src
